upgrade to spark 4.0.0-preview1